[gd_scene load_steps=138 format=2]

[ext_resource path="res://assets/player/itch jump sheet-Sheet.png" type="Texture" id=1]
[ext_resource path="res://assets/player/itch light atk sheet-Sheet.png" type="Texture" id=2]
[ext_resource path="res://assets/player/itch run-Sheet sheet.png" type="Texture" id=3]
[ext_resource path="res://assets/player/idle sheet-Sheet.png" type="Texture" id=4]
[ext_resource path="res://assets/player/itch hurt 2 sheet-Sheet.png" type="Texture" id=5]
[ext_resource path="res://game/player/Player.gd" type="Script" id=6]
[ext_resource path="res://game/player/PlayerArea2DControl.gd" type="Script" id=7]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 320, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 400, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 480, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 560, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 640, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 720, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 800, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 880, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 960, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1040, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1120, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1200, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1280, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1360, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 400, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 560, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 640, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 720, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 800, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 880, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 960, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1040, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1120, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1200, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1280, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1360, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1440, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 320, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 400, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 480, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1200, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1280, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1360, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1440, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1520, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1600, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 640, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 720, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 800, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 880, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 960, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1040, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 400, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 480, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 560, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 640, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 720, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 800, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=73]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 880, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=74]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 960, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=75]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1040, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=76]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1120, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=77]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1200, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=78]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1280, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=79]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1360, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=80]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1440, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=81]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1520, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=82]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1600, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=83]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1680, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=84]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1760, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=85]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1840, 0, 80, 80 )

[sub_resource type="SpriteFrames" id=86]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "idle",
"speed": 18.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ) ],
"loop": true,
"name": "jump",
"speed": 32.0
}, {
"frames": [ SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ) ],
"loop": true,
"name": "hit",
"speed": 18.0
}, {
"frames": [ SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ) ],
"loop": true,
"name": "attack_3",
"speed": 24.0
}, {
"frames": [ SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ) ],
"loop": true,
"name": "attack_2",
"speed": 14.0
}, {
"frames": [ SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ) ],
"loop": true,
"name": "attack_1",
"speed": 18.0
}, {
"frames": [ SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ) ],
"loop": true,
"name": "run",
"speed": 32.0
} ]

[sub_resource type="RectangleShape2D" id=87]
extents = Vector2( 10.9437, 13.2814 )

[sub_resource type="RectangleShape2D" id=88]
extents = Vector2( 7.94373, 15.7814 )

[sub_resource type="Animation" id=89]
length = 0.333333
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.333333 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ "attack_1", "attack_1" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.333333 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerSprite/Area2D/WeaponCollision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.166667, 0.333333 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=90]
length = 0.25
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ "attack_2", "attack_2" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerSprite/Area2D/WeaponCollision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.208333 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=91]
length = 0.25
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "attack_3", "attack_3" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerSprite/Area2D/WeaponCollision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.0555556, 0.166667 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=92]
resource_name = "hit"
length = 0.8
step = 0.0555556
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "hit", "hit" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 6 ]
}

[sub_resource type="Animation" id=93]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ "idle", "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 17 ]
}

[sub_resource type="Animation" id=94]
length = 0.428571
step = 0.0714286
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.428571 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "jump", "jump" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.428571 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 12 ]
}

[sub_resource type="Animation" id=95]
length = 0.75
loop = true
step = 0.03125
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.75 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "run", "run" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.75 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 23 ]
}

[sub_resource type="AnimationNodeAnimation" id=96]
animation = "attack_1"

[sub_resource type="AnimationNodeAnimation" id=97]
animation = "attack_1"

[sub_resource type="AnimationNodeAnimation" id=98]
animation = "attack_2"

[sub_resource type="AnimationNodeAnimation" id=99]
animation = "attack_2"

[sub_resource type="AnimationNodeAnimation" id=100]
animation = "attack_3"

[sub_resource type="AnimationNodeAnimation" id=101]
animation = "attack_3"

[sub_resource type="AnimationNodeAnimation" id=102]
animation = "hit"

[sub_resource type="AnimationNodeAnimation" id=103]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=104]
animation = "jump"

[sub_resource type="AnimationNodeAnimation" id=105]
animation = "run"

[sub_resource type="AnimationNodeStateMachineTransition" id=106]

[sub_resource type="AnimationNodeStateMachineTransition" id=107]

[sub_resource type="AnimationNodeStateMachineTransition" id=108]

[sub_resource type="AnimationNodeStateMachineTransition" id=109]

[sub_resource type="AnimationNodeStateMachineTransition" id=110]

[sub_resource type="AnimationNodeStateMachineTransition" id=111]

[sub_resource type="AnimationNodeStateMachineTransition" id=112]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=113]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=114]

[sub_resource type="AnimationNodeStateMachineTransition" id=115]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=116]

[sub_resource type="AnimationNodeStateMachineTransition" id=117]

[sub_resource type="AnimationNodeStateMachineTransition" id=118]

[sub_resource type="AnimationNodeStateMachineTransition" id=119]

[sub_resource type="AnimationNodeStateMachineTransition" id=120]

[sub_resource type="AnimationNodeStateMachineTransition" id=121]

[sub_resource type="AnimationNodeStateMachineTransition" id=122]

[sub_resource type="AnimationNodeStateMachineTransition" id=123]

[sub_resource type="AnimationNodeStateMachineTransition" id=124]

[sub_resource type="AnimationNodeStateMachineTransition" id=125]

[sub_resource type="AnimationNodeStateMachineTransition" id=126]

[sub_resource type="AnimationNodeStateMachineTransition" id=127]

[sub_resource type="AnimationNodeStateMachineTransition" id=128]

[sub_resource type="AnimationNodeStateMachine" id=129]
states/attack_1/node = SubResource( 97 )
states/attack_1/position = Vector2( 396.06, 325.984 )
"states/attack_1 2/node" = SubResource( 96 )
"states/attack_1 2/position" = Vector2( 227.036, -74.3232 )
states/attack_2/node = SubResource( 99 )
states/attack_2/position = Vector2( 621.521, 297.666 )
"states/attack_2 2/node" = SubResource( 98 )
"states/attack_2 2/position" = Vector2( 425.703, -75.2121 )
states/attack_3/node = SubResource( 101 )
states/attack_3/position = Vector2( 655.203, 130.111 )
"states/attack_3 2/node" = SubResource( 100 )
"states/attack_3 2/position" = Vector2( 629.703, -44.5454 )
states/hit/node = SubResource( 102 )
states/hit/position = Vector2( 620.571, 53.9644 )
states/idle/node = SubResource( 103 )
states/idle/position = Vector2( 396.926, 208.302 )
states/jump/node = SubResource( 104 )
states/jump/position = Vector2( 220.333, 90.4458 )
states/run/node = SubResource( 105 )
states/run/position = Vector2( 444.975, 33.0267 )
transitions = [ "idle", "run", SubResource( 106 ), "idle", "jump", SubResource( 107 ), "run", "idle", SubResource( 108 ), "run", "jump", SubResource( 109 ), "idle", "attack_3", SubResource( 110 ), "idle", "attack_2", SubResource( 111 ), "attack_2", "idle", SubResource( 112 ), "attack_3", "idle", SubResource( 113 ), "idle", "attack_1", SubResource( 114 ), "attack_1", "idle", SubResource( 115 ), "run", "attack_1 2", SubResource( 116 ), "run", "attack_2 2", SubResource( 117 ), "run", "attack_3 2", SubResource( 118 ), "attack_1 2", "run", SubResource( 119 ), "attack_2 2", "run", SubResource( 120 ), "attack_3 2", "run", SubResource( 121 ), "jump", "run", SubResource( 122 ), "idle", "hit", SubResource( 123 ), "jump", "hit", SubResource( 124 ), "run", "hit", SubResource( 125 ), "attack_1 2", "hit", SubResource( 126 ), "attack_2 2", "hit", SubResource( 127 ), "attack_3 2", "hit", SubResource( 128 ) ]
start_node = "idle"
graph_offset = Vector2( -125.297, 36.087 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=130]

[node name="Player" type="KinematicBody2D"]
position = Vector2( 113.5, 9 )
collision_layer = 2
collision_mask = 5
script = ExtResource( 6 )

[node name="PlayerSprite" type="AnimatedSprite" parent="."]
position = Vector2( 32, 17.5 )
frames = SubResource( 86 )
animation = "jump"
frame = 12

[node name="Camera2D" type="Camera2D" parent="PlayerSprite"]
position = Vector2( 2, -36.5 )
current = true
zoom = Vector2( 0.5, 0.5 )
limit_left = 0
limit_right = 1000
limit_bottom = 1000
drag_margin_h_enabled = true
smoothing_enabled = true
smoothing_speed = 10.0
drag_margin_left = 0.1
drag_margin_right = 0.1

[node name="Area2D" type="Area2D" parent="PlayerSprite" groups=[
"can_hit",
]]
position = Vector2( -0.5, 1.5 )
collision_layer = 2
collision_mask = 4
script = ExtResource( 7 )

[node name="WeaponCollision" type="CollisionShape2D" parent="PlayerSprite/Area2D"]
position = Vector2( 11, 4 )
shape = SubResource( 87 )
disabled = true

[node name="HitAnimation" type="Node2D" parent="PlayerSprite"]
visible = false

[node name="BodyCollision" type="CollisionShape2D" parent="."]
position = Vector2( 21.5, 22 )
shape = SubResource( 88 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack_1 = SubResource( 89 )
anims/attack_2 = SubResource( 90 )
anims/attack_3 = SubResource( 91 )
anims/hit = SubResource( 92 )
anims/idle = SubResource( 93 )
anims/jump = SubResource( 94 )
anims/run = SubResource( 95 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 129 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 130 )

[node name="InvulnerabilityTimer" type="Timer" parent="."]
wait_time = 0.8

[connection signal="area_entered" from="PlayerSprite/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="PlayerSprite/Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_InvulnerabilityTimer_timeout"]
